добавлены новые блоки и изменены картинки

--- a/src/app/components/home-faq/home-faq.component.html
+++ b/src/app/components/home-faq/home-faq.component.html
@@ -8,25 +8,24 @@
 
         <div class="card">
             <span class="hr"></span>
-            <h3>How can I purchase CactusSoft? </h3>
+            <h3>What's the difference between CactusSoft and CactusSoft+?</h3>
             <img src="/assets/img/icons/open-card.svg" alt="open answere">
             
-            <p>You can mint our NFT to have access to CactusSoft+ or buy the NFT on the OpenSea.</p>
+            <p>CactusSoft+ includes all modules from the basic subscription, plus a few more (AI etc.) </p>
         </div>
         
         <div class="card">
             <span class="hr"></span>
-            <h3>What's CactusSoft's retail price?</h3>
+            <h3>What's CactusSoft+ price?</h3>
             <img src="/assets/img/icons/open-card.svg" alt="open answere">
-            <p>Initial cost is 0.3 ETH (first month included), <br> renewal is 0.05 ETH/month</p>
+            <p>The initial cost is set by NFT sellers on <a href="https://opensea.io/collection/cactussoft-license" target="_blank" rel="noopener" class="opensea-link">OpenSea</a>. Renewal is 0.05 ETH/month for a Green Cactus and is free for a Gold one.</p>
         </div>
          
         <div class="card">
             <span class="hr"></span>
             <h3>Can I resell my license?</h3>
             <img src="/assets/img/icons/open-card.svg" alt="open answere">
-            <p>All CactusSoft+ licenses are resellable. <br> You can resell it via OpenSea.
-            </p>
+            <p>All unbindable CactusSoft licenses are resellable, including CactusSoft+ licenses (you can resell it via <a href="https://opensea.io/collection/cactussoft-license" target="_blank" rel="noopener" class="opensea-link">OpenSea</a>).</p>
         </div>
         
         <div class="card">
