--- a/src/app/screens/home/home.component.html
+++ b/src/app/screens/home/home.component.html
@@ -8,11 +8,12 @@
     <section class="section main" >
         <main>
             <app-home-tools></app-home-tools>
-            <app-about></app-about>
+            <!-- <app-about></app-about> -->
             <app-home-features></app-home-features>
-            <app-home-faq></app-home-faq>
+            <app-plans></app-plans>
+            <app-how-get-license></app-how-get-license>
             <app-roadmap></app-roadmap>
-            <app-pricing></app-pricing>
+            <app-home-faq></app-home-faq>
         </main>
         <app-home-footer></app-home-footer>
     </section>
