--- a/src/app/components/how-get-license/how-get-license.component.scss
+++ b/src/app/components/how-get-license/how-get-license.component.scss
@@ -54,7 +54,7 @@ $tab-size: 780px;
     }
 
     &__descript, a{
-        color: #7A8A88;
+        color: #e5e5e5;
         font-size: 16px;
         line-height: 100%;
 
